# overfocus

./: Cargo.toml
overfocus/: Cargo.toml
overfocus-tui/: Cargo.toml
overfocus-tui/src/: app.rs  main.rs
overfocus-tui/src/app/: input.rs  notifications.rs  styles.rs  ui.rs  utils.rs
overfocus-tui/src/app/notifications/: linux_notify.rs  win_notify.rs
overfocus-tui/src/app/pomo_ui/: clock.rs  starter.rs
overfocus/src/: lib.rs  logger.rs  pomodoro.rs
